<resources>
    <string name="app_name">GoodTaxi</string>
    <string name="Logo">TODO</string>
    <string name="BackgroundSignIn">TODO</string>
    <string name="LoginEditText">Name</string>
    <string name="BtnLogIn">Sign In</string>
    <string name="PasswordEditText">Password</string>
    <string name="ForgotPswrd">Forgot Password?</string>
    <string name="create_a_new_account">Create a new account?</string>
    <string name="PasswordImage">PswrImage</string>
    <string name="sign_up">Sign Up</string>
    <string name="Person">Person</string>
    <string name="email">Email</string>
    <string name="RepeatPassword">RepeatPassord</string>
    <string name="MenuImg">☰</string>
    <string name="LeftCar">TODO</string>
    <string name="Rightcar">TODO</string>
    <string name="CenterCar">TODO</string>
    <string name="LaunchBackgroud">TODO</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>ё
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mail" />
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="have_an_account">Have an account?</string>
    <string name="repeat_password">repeat password</string>
    <string name="your_password">your password</string>
    <string name="your_e_mail">your e-mail</string>
</resources>